--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box-model">
-        <p>"Box Model is amazing"</p>
+        <p class="tag">"Box Model is amazing"</p>
     </div>
 </body>
 </html>
